# unwrapped-fm

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  README.md  Taskfile.yml  docker-compose.yml  next.config.ts
.cursor/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  ssrArchitecture.md  systemPatterns.md  techContext.md
.cursor/rules/: core.mdc  frontend-best-practices.mdc  ssrArchitecture.mdc
backend/: .coverage  README.md  README_AI.md  atlas.hcl  example.env  production.env  pyproject.toml  railway.json
backend/migrations/: 20250525051046.sql  20250525062200_add_share_token_with_data.sql  20250526155903.sql  20250526220944.sql  20250526235330.sql  atlas.sum
backend/scripts/: atlas_migrate.py  load_models.py
backend/src/unwrapped/: __init__.py  main.py
backend/src/unwrapped/auth/: __init__.py  models.py  router.py  service.py  spotify.py
backend/src/unwrapped/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
backend/src/unwrapped/music/: ai_client.py  analysis_coordinator.py  analysis_service.py  analyze_router.py  background_tasks.py  models.py  public_router.py  result_persister.py  sharing.py  spotify.py  spotify_data_collector.py  token_refresh_service.py
backend/tests/: __init__.py  conftest.py  test_ai_client.py  test_analyze_endpoint.py  test_auth.py  test_auth_endpoints.py  test_main.py  test_public_endpoints.py  test_user_service.py
backend/tests/e2e/: README.md  __init__.py  test_music_analyzer_workflow.py
backend/tests/utils/: atlas.py
docs/: architecture_remediation_plan.md  architecture_review.md  backend-best-practices.md  design-ui-best-practices.md  frontend-best-practices.md
frontend/: .gitignore  README.md  env.example  env.production  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: init-db.sql
(+68 files in other folders)
